testsuite/tests/linear/should_fail/T18888.hs
{-# LANGUAGE LinearTypes #-}
module T18888 where

f :: a %001 -> b
f x = undefined x
