testsuite/tests/linear/should_fail/T18888.stderr

T18888.hs:4:9: error: [GHC-68567]
    Illegal type: ‘001’
    Suggested fix:
      Perhaps you intended to use DataKinds (implied by TypeInType and UnliftedDatatypes)
